fixed spacing thing

--- a/home2.css
+++ b/home2.css
@@ -174,7 +174,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 9rem;
+        margin-top: 1rem;
         gap: 1rem;
       }
 
